# codec2

./: .gitignore  Cargo.toml  README.md  expanded.rs  expected_macro_expand.rs  map.md  nested_map.md  sol_vec_nested_example.md
codec-derive/: Cargo.toml
codec-derive/src/: lib.rs
codec-derive/tests/: codec_macro_tests.rs
examples/no-std/: Cargo.toml
examples/no-std/src/: lib.rs
src/: align.rs  bytes.rs  empty.rs  encoder.rs  encoder2.rs  error.rs  evm.rs  hash.rs  lib.rs  main.rs  nested_map.md  old_vec.rs  primitive.rs  tests.rs  tuple.rs  utils.rs  vec.rs
src/rnd/: align.rs  buf.rs  buf2.rs  buf3.rs  debug.rs  encoder3.rs  encoder_old.rs  evm.rs
