[package]
name = "codec-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
convert_case = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
syn = { version = "2.0.79", default-features = false }
crypto-hashes = { version = "0.10.0", default-features = false, features = ["include_weak"] }


[lib]
proc-macro = true

