[package]
name = "codec-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0", default-features = false }
convert_case = { version = "0.6.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
syn = { version = "2.0.79", default-features = false, features = ["derive", "parsing", "printing"] }
crypto-hashes = { version = "0.10.0", default-features = false, features = ["include_weak"] }
proc-macro2 = { version = "1.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }


[dev-dependencies]
bytes = { version = "1.7.2", default-features = false }
codec2 = { path = "../", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
